fea-rs/test-data/compile-tests/mini-latin/bad/variable_value_record_unknown_axis.fea
valueRecordDef <0 (wght=200:-100 heft=150,wght=900:-120) 0 0> foo;
